<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorHeader"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="35sp" />


        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:src="@mipmap/ic_back_foreground"
            android:contentDescription="@string/contentDescription_back"
            android:visibility="gone" />


        <ImageView
            android:id="@+id/imageViewCamera"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:contentDescription="@string/contentDescription_camera"
            android:src="@mipmap/ic_camera_foreground"
            android:visibility="gone" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black">

    </RelativeLayout>


</LinearLayout>